--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     const teams = [
   "Aalborg BK", "Aarau", "Aarhus", "AB", "Aberdeen", "Académica Coimbra", "Admira Wien", "Admira Wacker", "ADO Den Haag",
   "AE Larisas", "AEK Athīna", "AEK Làrnaka", "AEL Lemesos", "AIK Solna", "Ajax", "Akademik Sofija", "Alanija Vladikavkaz",
-  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
+  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthōsī Ammochōstou", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
   "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Wien", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
@@ -182,7 +182,7 @@
   "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Frankfurt", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
-  "Fenerbahçe", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
+  "Fenerbahçe", "Ferencváros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
   "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
   "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
