--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
   "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/e/e2/600px_Granata_con_inserti_Bianchi.png"},
+  "Internazionale Milano": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg,
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/2/26/600px_pentasection_vertical_Black_HEX-0753CB.svg"},
   "Juventus": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/49/600px_pentasection_vertical_Black_White.svg"},
   "Manchester United": {flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
