--- a/index.html
+++ b/index.html
@@ -220,10 +220,12 @@
   "Zulte Waregem", "Zürich"
 ];
   const teamInfo = {
-    "Benfica":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
+  "Benfica":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
       colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ac/Rosso_e_Bianco_con_aquila.svg"},
   "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
+  "Dukla Praha":{flag:"https://upload.wikimedia.org/wikipedia/commons/c/cb/Flag_of_the_Czech_Republic.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ab/Giallo_e_Rosso.svg"},
   "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/e/e2/600px_Granata_con_inserti_Bianchi.png"},
   "Internazionale Milano": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
@@ -236,6 +238,10 @@
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"},
   "Porto":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/9/9b/600px_Bianco_e_Blu_a_Strisce-Flag.svg"},
+  "Rangers":{flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/3/3d/600px_HEX-FEFCF0_bordered_HEX-FF0000_HEX-000080_filled.svg"},
+  "Rapid Wien":{flag:"https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_Austria.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/5/50/600px_diagonal_White_and_Green_HEX-1E6742.svg"},
   "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
   "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
