--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
       colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ac/Rosso_e_Bianco_con_aquila.svg"},
   "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
+  "CSKA Sofija":{flag:"https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Bulgaria.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/2/22/900px_background_HEX-F72B0D_five_pointed_star_HEX-F72B0D_White_circle.svg"},
   "Dukla Praha":{flag:"https://upload.wikimedia.org/wikipedia/commons/c/cb/Flag_of_the_Czech_Republic.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ab/Giallo_e_Rosso.svg"},
   "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
@@ -246,6 +248,8 @@
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
   "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1b/600px_White_border_HEX-DC143C_rectangle.svg"},
+  "Young Boys": {flag: "https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Switzerland.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/2/21/600px_Nero_e_Giallo_%28Strisce_Orizzontali%29.png"},
   "Barcelona": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/4f/600px_Blue_HEX-00529F_Gold_HEX-FFDF1A_White_Purple_HEX-A2214B_Red_HEX-E1393D.svg"}
   // Continua così per le altre squadre...
