--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
   const teamInfo = {
   "Benfica":{flag:"https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_Portugal.svg",
       colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ac/Rosso_e_Bianco_con_aquila.svg"},
+  "Borussia Dortmund":{flag:"https://upload.wikimedia.org/wikipedia/commons/b/ba/Flag_of_Germany.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/3/33/600px_HEX-FFFF00_Black_bordered.svg"},
   "Crvena Zvezda":{flag:"https://upload.wikimedia.org/wikipedia/commons/f/ff/Flag_of_Serbia.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/47/Flag_of_Red_Star_Belgrade.svg"},
   "CSKA Sofija":{flag:"https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Bulgaria.svg",
@@ -248,6 +250,8 @@
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
   "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1b/600px_White_border_HEX-DC143C_rectangle.svg"},
+  "Standard Liège":{flag:"https://upload.wikimedia.org/wikipedia/commons/9/92/Flag_of_Belgium_%28civil%29.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/e/e5/600px_bianco_con_lato_rosso_bordato_d%27oro.svg"},
   "Young Boys": {flag: "https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Switzerland.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/2/21/600px_Nero_e_Giallo_%28Strisce_Orizzontali%29.png"},
   "Barcelona": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
