--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahçe", "Ferencváros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
   "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
-  "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
+  "GKS Katowice", "Glenavon", "Glentoran", "Górnik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
   "Hapoel Tel Aviv", "Heart of Midlothian", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
   "Honvéd Budapest", "HPS", "Hradec Králové", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
-  "Keflavik", "KF Tiranë", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
+  "Keflavik", "KF Tiranë", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavík", "Krasnodar ", "KSV Waregem", 
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
   "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "Łódzki", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
@@ -449,7 +449,7 @@
         "CSKA Sofija": {CL_P:1, CL_VS:-1, CL_DR:-1},
         "Panathīnaïkos": {CL_P:1, CL_VS:-1, CL_DR:-1},
         "Steaua București": {CL_P:1, CL_VS:-1, CL_DR:-2},
-        "Gornik Zabrze": {CL_P:1, CL_VS:0, CL_DR:-5},
+        "Górnik Zabrze": {CL_P:1, CL_VS:0, CL_DR:-5},
         "Sporting Clube de Portugal": {CL_P:1, CL_VS:-1, CL_DR:-2},
         "Linfield": {CL_P:1, CL_VS:-1, CL_DR:-3},
         "Monaco": {CL_P:1, CL_VS:-2, CL_DR:-2},
@@ -502,7 +502,7 @@
       "Partizan Beograd": {CL_Q:1, CL_P: 1, CL_VS:0, CL_DR:5}, 
       "Milan" : {CL_Q:1, CL_P: 1, CL_VS:1, CL_DR:2}, 
       "Benfica": {CL_O:1, CL_P: 1, CL_VS:1, CL_DR:1}, 
-      "Gornik Zabrze": {CL_O:1, CL_P: 1, CL_VS:1, CL_DR:0},   
+      "Górnik Zabrze": {CL_O:1, CL_P: 1, CL_VS:1, CL_DR:0},   
       "Galatasaray": {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
       "Monaco": {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:2},  
       "Dinamo București" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:-1},
@@ -524,6 +524,39 @@
       "Esbjerg" : {CL_P: 1, CL_VS:-2, CL_DR:-7}, 
       "Rangers" : {CL_P: 1, CL_VS:-2, CL_DR:-7},
       "Valletta" : {CL_P: 1, CL_VS:-2, CL_DR:-8}             
+    },
+      "1964/65": {
+      "Glentoran": {CL_P: 1, CL_VS:-1, CL_DR:-1},
+      "Panathīnaïkos": {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:0},  
+      "Partizani Tiranë": {CL_P: 1, CL_VS:-1, CL_DR:-2},
+      "Köln": {CL_Q:1, CL_P: 1, CL_VS:2, CL_DR:3},
+      "KR Reykjavík": {CL_P: 1, CL_VS:-2, CL_DR:-10},
+      "Liverpool": {CL_SF:1, CL_P: 1, CL_VS:4, CL_DR:13}, 
+      "Anderlecht": {CL_O:1, CL_P: 1, CL_VS:-2, CL_DR:-4}, 
+      "Bologna" : {CL_P: 1, CL_VS:0, CL_DR:0}, 
+      "Internazionale Milano": {CL_CL:1, CL_P: 1, CL_VS:4, CL_DR:10}, 
+      "Sliema Wanderers": {CL_P: 1, CL_VS:-2, CL_DR:-7},   
+      "Dinamo București": {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
+      "Rangers": {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:4},  
+      "Crvena Zvezda" : {CL_P: 1, CL_VS:-1, CL_DR:-2},
+      "Rapid Wien" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},  
+      "Shamrock" : {CL_P: 1, CL_VS:-2, CL_DR:-5}, 
+      "DWS": {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:9}, 
+      "Fenerbahçe"  : {CL_P: 1, CL_VS:-2, CL_DR:-3},
+      "Reipas Lahti": {CL_P: 1, CL_VS:0, CL_DR:-2}, 
+      "Lyn Oslo" : {CL_P: 1, CL_VS:-2, CL_DR:-5},
+      "Sachsen Leipzig" : {CL_P: 1, CL_VS:-2, CL_DR:-4},  
+      "Győr"  : {CL_SF: 1, CL_VS:1, CL_DR:1},
+      "Lokomotiv Sofija" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
+      "Malmö FF" : {CL_P: 1, CL_VS:0, CL_DR:-3}, 
+      "Saint-Étienne" : {CL_P: 1, CL_VS:-1, CL_DR:-1},
+      "La Chaux-de-Fonds" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:-4}, 
+      "Aris Bonnevoie" : {CL_P: 1, CL_VS:-2, CL_DR:-8},
+      "Benfica" : {CL_F:1, CL_P: 1, CL_VS:4, CL_DR:20}, 
+      "B1909"   : {CL_P: 1, CL_VS:-2, CL_DR:-7},   
+      "Real Madrid" : {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:8}, 
+      "Dukla Praha" : {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:-4},
+      "Górnik Zabrze" : {CL_P: 1, CL_VS:0, CL_DR:0}             
     }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
