--- a/index.html
+++ b/index.html
@@ -540,11 +540,11 @@
       "Rangers": {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:4},  
       "Crvena Zvezda" : {CL_P: 1, CL_VS:-1, CL_DR:-2},
       "Rapid Wien" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},  
-      "Shamrock" : {CL_P: 1, CL_VS:-2, CL_DR:-5}, 
+      "Shamrock Rovers" : {CL_P: 1, CL_VS:-2, CL_DR:-5}, 
       "DWS": {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:9}, 
       "Fenerbahçe"  : {CL_P: 1, CL_VS:-2, CL_DR:-3},
       "Reipas Lahti": {CL_P: 1, CL_VS:0, CL_DR:-2}, 
-      "Lyn Oslo" : {CL_P: 1, CL_VS:-2, CL_DR:-5},
+      "Lyn Oslo" : {CL_O:1, CL_P: 1, CL_VS:-2, CL_DR:-5},
       "Sachsen Leipzig" : {CL_P: 1, CL_VS:-2, CL_DR:-4},  
       "Győr"  : {CL_SF: 1, CL_VS:1, CL_DR:1},
       "Lokomotiv Sofija" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
