--- a/index.html
+++ b/index.html
@@ -230,12 +230,16 @@
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/2/22/900px_background_HEX-F72B0D_five_pointed_star_HEX-F72B0D_White_circle.svg"},
   "Dukla Praha":{flag:"https://upload.wikimedia.org/wikipedia/commons/c/cb/Flag_of_the_Czech_Republic.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/a/ab/Giallo_e_Rosso.svg"},
+  "Győr":{flag:"https://upload.wikimedia.org/wikipedia/commons/c/c1/Flag_of_Hungary.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/8/82/Verde_e_Bianco2.svg"},
   "Heart of Midlothian": {flag:"https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/e/e2/600px_Granata_con_inserti_Bianchi.png"},
   "Internazionale Milano": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/2/26/600px_pentasection_vertical_Black_HEX-0753CB.svg"},
   "Juventus": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/49/600px_pentasection_vertical_Black_White.svg"},
+  "Liverpool":{flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/4f/Flag_red_HEX-CE2931.svg"},
   "Manchester United": {flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/d/d8/600px_Man_Utd_stylized.svg"},
   "Milan": {flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
@@ -248,6 +252,8 @@
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/5/50/600px_diagonal_White_and_Green_HEX-1E6742.svg"},
   "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
+  "Saint-Étienne":{flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/9/9c/600px_HEX-008736_rectangle_on_White.svg"},
   "Stade de Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1b/600px_White_border_HEX-DC143C_rectangle.svg"},
   "Standard Liège":{flag:"https://upload.wikimedia.org/wikipedia/commons/9/92/Flag_of_Belgium_%28civil%29.svg",
