--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
       "Reipas Lahti": {CL_P: 1, CL_VS:0, CL_DR:-2}, 
       "Lyn Oslo" : {CL_O:1, CL_P: 1, CL_VS:-2, CL_DR:-5},
       "Sachsen Leipzig" : {CL_P: 1, CL_VS:-2, CL_DR:-4},  
-      "Győr"  : {CL_SF: 1, CL_VS:1, CL_DR:1},
+      "Győr"  : {CL_SF: 1, CL_P: 1, CL_VS:1, CL_DR:1},
       "Lokomotiv Sofija" : {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:2},
       "Malmö FF" : {CL_P: 1, CL_VS:0, CL_DR:-3}, 
       "Saint-Étienne" : {CL_P: 1, CL_VS:-1, CL_DR:-1},
