--- a/index.html
+++ b/index.html
@@ -563,6 +563,39 @@
       "Real Madrid" : {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:8}, 
       "Dukla Praha" : {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:-4},
       "Górnik Zabrze" : {CL_P: 1, CL_VS:0, CL_DR:0}             
+    },
+      "1965/66": {
+      "Fenerbahçe": {CL_P: 1, CL_VS:-1, CL_DR:-4},
+      "Anderlecht": {CL_Q:1, CL_P: 1, CL_VS:2, CL_DR:12},  
+      "Lyn Oslo": {CL_P: 1, CL_VS:0, CL_DR:-2},
+      "Derry City": {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:-7},
+      "KF Tiranë": {CL_P: 1, CL_VS:-1, CL_DR:-1},
+      "Kilmarnock": {CL_O:1, CL_P: 1, CL_VS:0, CL_DR:-3}, 
+      "Real Madrid": {CL_CL:1, CL_P: 1, CL_VS:3, CL_DR:11}, 
+      "Feyenoord" : {CL_P: 1, CL_VS:0, CL_DR:-4}, 
+      "Dinamo București": {CL_O:1, CL_P: 1, CL_VS:2, CL_DR:4}, 
+      "B1909": {CL_P: 1, CL_VS:-2, CL_DR:-5},   
+      "Internazionale Milano": {CL_SF:1, CL_P: 1, CL_VS:0, CL_DR:4},
+      "Keflavík": {CL_P: 1, CL_VS:-2, CL_DR:-11},  
+      "Ferencváros" : {CL_Q:1, CL_P: 1, CL_VS:2, CL_DR:9},
+      "Panathīnaïkos" : {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:0},  
+      "Sliema Wanderers" : {CL_P: 1, CL_VS:0, CL_DR:-2}, 
+      "Lausanne": {CL_P: 1, CL_VS:-1, CL_DR:-4}, 
+      "Sparta Praha"  : {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:6},
+      "LASK": {CL_P: 1, CL_VS:-2, CL_DR:-3}, 
+      "Górnik Zabrze" : {CL_0:1, CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Partizan Beograd" : {CL_F:1, CL_P: 1, CL_VS:0, CL_DR:6},  
+      "Nantes"  : {CL_P:1, CL_VS:-1, CL_DR:-2},
+      "Apoel" : {CL_P: 1, CL_VS:-2, CL_DR:-10},
+      "Werder Bremen" : {CL_0:1, CL_P: 1, CL_VS:2, CL_DR:8}, 
+      "Drumcondra" : {CL_P: 1, CL_VS:0, CL_DR:-2},
+      "Frankfurter Viktoria" : {CL_O:1, CL_P: 1, CL_VS:-2, CL_DR:-2}, 
+      "HJK" : {CL_P: 1, CL_VS:-2, CL_DR:-7},
+      "Manchester United" : {CL_SF:1, CL_P: 1, CL_VS:6, CL_DR:15}, 
+      "Djurgården"   : {CL_P: 1, CL_VS:0, CL_DR:-5},   
+      "Levski Sofija" : {CL_O:1, CL_P: 1, CL_VS:-1, CL_DR:4}, 
+      "Stade Dudelange" : {CL_P: 1, CL_VS:-2, CL_DR:-18},
+      "Benfica" : {CL_Q:1, CL_P: 1, CL_VS:1, CL_DR:14}             
     }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
