--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
   "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Köln", "Kjøbenhavns BK", 
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
-  "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
+  "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
   "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Frankfurt", 
@@ -189,11 +189,11 @@
   "Hapoel Tel Aviv", "Heart of Midlothian", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
   "Honvéd Budapest", "HPS", "Hradec Králové", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
-  "Keflavik", "KF Tiranë", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavík", "Krasnodar ", "KSV Waregem", 
-  "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
+  "Keflavík", "KF Tiranë", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavík", "Krasnodar ", "KSV Waregem", 
+  "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
   "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "Łódzki", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
-  "Losena", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö FF", 
+  "Lausanne", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö FF", 
   "Manchester City", "Manchester United", "Marek Dupnica", 
   "Marítimo", "Metalist Charkiv", "Metz", "Middlesbrough", "Midtjylland", "Milan", "Mlada Boleslav", "Molde", "Monaco", "München 1860", "Montpellier", "Moss", 
   "MTK Budapest", "Nacional de Madeira", "Nancy", "Nantes", "Napoli", "NEC Nijmegen", "Neftçi Baku", "Neuchâtel Xamax", "Newcastle Utd", "Nice", "NK Maribor", 
