--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
   "Roma", "RoPS", "Rosenborg", "Rostov", "Rot-Weiss Erfurt", "Rot-Weiss Essen", "Rotor Volvograd", "Rubin Kazan", "Ruch Chorzow", "RWD Molenbeek", "Saarbrücken", 
   "Sachsen Leipzig", "Sachtar Donec'k", "Saint-Étienne", "Salzburg", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Sevilla", "Skeid", "Skënderbeu", "Skonto Riga", 
-  "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
-  "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
+  "Slavia Praha", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
+  "Sparta Praha", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
   "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade de Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liège", "Start", "Steaua București", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Újpesti Dózsa", "Union Berlino", "Union Luxembourg", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
   "Valletta", "Valur", "Vardar", "Vasas Budapest", "Vaslui", "Vejle", "Velez Mostar", "Ventspils", "Victoria Bucarest", "Viking", "Vikingur", "Frankfurter Viktoria", "Viktoria Plzen", 
   "Villareal", "Vistola Kraków", "Vitesse", "Vitkovice", "Vitoria Guimaraes", "Vitoria Setubal", "Vllaznia", "Vojvodina", "Vorskla", "VSS Kosice", "Wacker Innsbruck", "Waterford", 
-  "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys", 
+  "Watford", "Werder Bremen", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys", 
   "Zaglebie Lubin", "Zaglebie Walbrzych", "Zalgiris", "Zalgiris Kaunas", "Zbrojovka Brno", "Zeljeznicar", "Zenit San Pietroburgo", "Zilina", "Zimbru Chișinău", "Zorja", "Zrinjski Mostar", 
   "Zulte Waregem", "Zürich"
 ];
@@ -583,7 +583,7 @@
       "Lausanne": {CL_P: 1, CL_VS:-1, CL_DR:-4}, 
       "Sparta Praha"  : {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:6},
       "LASK": {CL_P: 1, CL_VS:-2, CL_DR:-3}, 
-      "Górnik Zabrze" : {CL_0:1, CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Górnik Zabrze" : {CL_0: 1, CL_P: 1, CL_VS:0, CL_DR:-1},
       "Partizan Beograd" : {CL_F:1, CL_P: 1, CL_VS:0, CL_DR:6},  
       "Nantes"  : {CL_P:1, CL_VS:-1, CL_DR:-2},
       "Apoel" : {CL_P: 1, CL_VS:-2, CL_DR:-10},
