--- a/index.html
+++ b/index.html
@@ -583,11 +583,11 @@
       "Lausanne": {CL_P: 1, CL_VS:-1, CL_DR:-4}, 
       "Sparta Praha"  : {CL_Q:1, CL_P: 1, CL_VS:3, CL_DR:6},
       "LASK": {CL_P: 1, CL_VS:-2, CL_DR:-3}, 
-      "Górnik Zabrze" : {CL_0: 1, CL_P: 1, CL_VS:0, CL_DR:-1},
+      "Górnik Zabrze" : {CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:-1},
       "Partizan Beograd" : {CL_F:1, CL_P: 1, CL_VS:0, CL_DR:6},  
       "Nantes"  : {CL_P:1, CL_VS:-1, CL_DR:-2},
       "Apoel" : {CL_P: 1, CL_VS:-2, CL_DR:-10},
-      "Werder Bremen" : {CL_0:1, CL_P: 1, CL_VS:2, CL_DR:8}, 
+      "Werder Bremen" : {CL_O:1, CL_P: 1, CL_VS:2, CL_DR:8}, 
       "Drumcondra" : {CL_P: 1, CL_VS:0, CL_DR:-2},
       "Frankfurter Viktoria" : {CL_O:1, CL_P: 1, CL_VS:-2, CL_DR:-2}, 
       "HJK" : {CL_P: 1, CL_VS:-2, CL_DR:-7},
